test/errors/parse-malformed-define.ksu
; ERROR: Parsing error at line 3, column 8, file test/errors/parse-malformed-define.ksu

(define)
